<resources>
    <string name="app_name">SGAlert_version_2</string>
    <string name="integrantes_del_grupo_familiar">Integrantes del grupo familiar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="direcci_n">Dirección</string>
    <string name="correo">Correo</string>
    <string name="telefono">Teléfono</string>
    <string name="datos_del_hogar">Datos del hogar</string>
    <string name="sgalert">SGAlert</string>
    <string name="juanpe_gmail_com">juanpe@gmail.com</string>
    <string name="numero_telefonico_hogar">9 3234 4312 📲</string>
    <string name="ver_registro_de_alertas">Ver registro de alertas</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="gas">Gas</string>
    <string name="rango">Rango</string>
    <string name="x">X</string>
    <string name="integrante_1">Integrante 1</string>
    <string name="andres">Andres</string>
    <string name="perez">Perez</string>
    <string name="calle_siempre_viva_s_n">calle siempre viva s/n</string>
    <string name="andrespe_gmail_com">AndresPe@gmail.com</string>
    <string name="_9_2999_3489">9 2999 3489</string>
    <string name="integrante_3">Integrante 3</string>
    <string name="fernando">Fernando</string>
    <string name="fernandope_gmail_com">FernandoPe@gmail.com</string>
    <string name="_9_2323_2313">9 2323 2313</string>
    <string name="integrante_2">Integrante 2</string>
    <string name="martin">Martin</string>
    <string name="martinpe_gmail_com">MartinPe@gmail.com</string>
    <string name="_9_2999_1189">9 2999 1189</string>
    <string name="juan">Juan</string>
    <string name="llamar_a_emergencias">Llamar a emergencias</string>
    <string name="n_meros_de_emergencia">Números de Emergencia</string>
    <string name="bomberos">Bomberos 🧑‍🚒</string>
    <string name="_132">132 📲</string>
    <string name="ambulancia">Ambulancia 🚑</string>
    <string name="_131">131 📲</string>
    <string name="carabineros">Carabineros 👮</string>
    <string name="ingresa_tu_usuario">ingresa tu usuario</string>
    <string name="ingresa_tu_contrase_a">ingresa tu contraseña</string>
    <string name="o_ingresa_con">o ingresa con</string>
    <string name="ingresar">ingresar</string>
    <string name="_133">133 📲</string>
    <string name="contactos_familiares">Contactos Familiares</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="n_mero_de_tel_fono">Número de Teléfono</string>
    <string name="solo_se_pueden_agregar_3_contactos_max">Solo se pueden agregar 3 contactos max.</string>
    <string name="agregar">Agregar</string>
    <string name="para_editar_o_borrar_selecciona_el_contacto_antes">Para editar o borrar selecciona el contacto antes.</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="lectura_actual">lectura actual</string>
    <string name="salir_de_la_aplicaci_n">Salir de la aplicación</string>
    <string name="historial_de_alertas">Historial de Alertas</string>
    <string name="_29_03_24">29_03_24</string>
    <string name="_22_39">22:39</string>
    <string name="co">co</string>
    <string name="_60">60</string>
    <string name="_28_03_24">28_03_24</string>
    <string name="_10_20">10:20</string>
    <string name="_65">65</string>
    <string name="_22_03_24">22_03_24</string>
    <string name="_09_10">09:10</string>
    <string name="_70">70</string>
    <string name="_21_03_24">21_03_24</string>
    <string name="_23_32">23:32</string>
    <string name="_50">50</string>
    <string name="selecciona_el_registro_para_eliminarlo">selecciona el registro para eliminarlo.</string>
</resources>