<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/degradado">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/sgalert"
                android:fontFamily="@font/fredokavariablefontwdthwght"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TableLayout
                android:id="@+id/myTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:stretchColumns="1"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marca"
                >

                <TableRow
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/datos_del_hogar"
                        android:textAlignment="center"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/nombre"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView

                        android:layout_weight="8"
                        android:text="@string/juan"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/apellido"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="8"
                        android:text="@string/perez"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/direcci_n"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="8"
                        android:text="@string/calle_siempre_viva_s_n"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/correo"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_weight="8"
                        android:text="@string/juanpe_gmail_com"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/telefono"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/numeroHogar"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/numero_telefonico_hogar"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:backgroundTint="@color/lightgrey"/>
                </TableRow>


            </TableLayout>
            <Button
                android:id="@+id/btnEmergencia"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/llamar_a_emergencias"
                android:textSize="16sp"
                android:backgroundTint="@color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myTextView"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lectura Actual"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxHeight="200dp"
                        android:src="@drawable/graphic_business_and_finance_svgrepo_com" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnIntegrantes"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/integrantes_del_grupo_familiar"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:backgroundTint="@color/white"
                />

            <Button
                android:id="@+id/btnRegistro"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_registro_de_alertas"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:backgroundTint="@color/white"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/btnSalir"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/salir_de_la_aplicaci_n"
                android:backgroundTint="@color/black"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>

    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>